Fix class name for dark mode styling in companyConfig.css

--- a/app/companyConfig/static/css/companyConfig.css
+++ b/app/companyConfig/static/css/companyConfig.css
@@ -7,7 +7,7 @@
   padding: 32px 32px 24px 32px;
 }
 
-.dark-mode .user-config-form {
+.dark-mode .company-config-form {
   background: black;
   box-shadow: 0px 0px 10px #cccccc90;
 }
